--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,11 +1,10 @@
 .header {
 	width: 100%;
-	height: 100px;
-	background-color: #000;
 	color: #fff;
 
 	&_settings {
 		background-color: #d8d8d8;
+		color: #0871B5;
 
 		.navbar {
 			flex-flow: row wrap;
@@ -23,6 +22,26 @@
 			}
 			&-login {
 				justify-content: flex-end;
+			}
+		}
+	}
+	&_catalog {
+		background-color: #000;
+		display: flex;
+		padding: 10px;
+		justify-content: center;
+		align-items: center;
+
+		.navbar-catalog {
+			.products-filter {
+				> i {
+					background: rgba(255, 255, 255, 0.1);
+					min-width: 2em;
+					border: none;
+					text-align: center;
+					border-top: 1.8px solid transparent;
+					border-bottom: 1.8px solid transparent;
+				}
 			}
 		}
 	}
