Fix style header

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -34,6 +34,7 @@
 
 		.navbar-catalog {
 			.products-filter {
+				margin: 0 0 0 20px;
 				> i {
 					background: rgba(255, 255, 255, 0.1);
 					min-width: 2em;
