--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container">
-  <app-header></app-header>
-  <app-products></app-products>
-</div>
+<router-outlet></router-outlet>
+<ngx-loading-bar
+  height="3px"
+  [includeSpinner]="false"></ngx-loading-bar>
