--- a/src/app/modules/products/components/product-card.component.html
+++ b/src/app/modules/products/components/product-card.component.html
@@ -1,9 +1,9 @@
 <mat-card
-  routerLink="/product/{{product.id}}"
-  *ngIf="product && product.thumbnailImage"
+  routerLink="/product/{{product.itemId}}"
+  *ngIf="product && product.largeImage"
   ngClass="{{class}}">
 
-  <img mat-card-image src="{{product.thumbnailImage}}" />
+  <img mat-card-image src="{{product.largeImage}}" />
 
   <mat-card-content>
     <strong>{{product.name}}</strong>
