--- a/src/app/modules/products/pages/product-list/product-list.component.html
+++ b/src/app/modules/products/pages/product-list/product-list.component.html
@@ -10,7 +10,7 @@
     </button>
   </div>
 
-  <div class="list-holder" >
+  <div *ngIf="!isLoading; else loading" class="list-holder" >
     <app-product-card *ngFor="let p of products" [product]="p"></app-product-card>
   </div>
 
