--- a/src/app/modules/products/pages/product-list/product-list.component.scss
+++ b/src/app/modules/products/pages/product-list/product-list.component.scss
@@ -16,3 +16,22 @@
     margin: 0;
   }
 }
+
+.cart-container {
+  position: relative;
+  z-index: 4;
+  display: block;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  z-index: 3;
+  outline: 0;
+  box-sizing: border-box;
+  overflow-y: auto;
+  transform: translate3d(-100%,0,0);
+  visibility: visible;
+  min-width: 250px;
+  box-shadow: 0 8px 10px -5px rgba(0,0,0,.2), 0 16px 24px 2px rgba(0,0,0,.14), 0 6px 30px 5px rgba(0,0,0,.12);
+  background: linear-gradient(-60deg, rgba(202, 202, 209, 1), rgba(202, 202, 209, 1), rgba(202, 202, 209, 1), rgba(202, 202, 209, 1));
+}
