--- a/src/app/modules/products/pages/product-detail/product-detail.component.scss
+++ b/src/app/modules/products/pages/product-detail/product-detail.component.scss
@@ -10,23 +10,29 @@
     max-width: 400px;
     margin-bottom: $spacer;
   }
-  .image-gallery {
+  .gallery {
     display: flex;
-    flex-flow: row wrap;
-    &_item {
-      flex: 1;
+    flex-direction: row wrap;
+    .image-gallery {
       display: flex;
       flex-direction: column;
-      max-width: 20%;
-    }
-    img {
-      flex: 1;
-      max-width: 80%;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
+      
+      &_item {
+        display: flex;
+        flex-direction: column;
+      }
+      img {
+        flex: 1;
+        max-width: 80%;
+      }
     }
   }
 }
 .description-column {
-  flex: auto;
+  flex: 1;
   padding: 0 $spacer $spacer;
   h1 {
     margin-top: 0;
