--- a/src/app/modules/products/pages/product-detail/product-detail.component.html
+++ b/src/app/modules/products/pages/product-detail/product-detail.component.html
@@ -24,6 +24,12 @@
       <p>{{ product.longDescription }}</p>
       <span>{{ product.stock !== 'Not available' ? product.salePrice : product.stock}}</span>
       <mat-divider></mat-divider>
+      <button mat-raised-button>
+        <mat-icon>local_shipping</mat-icon> Encomendar
+      </button>
+      <button mat-raised-button color="primary" (click)="getCartItem(product)">
+        Comprar
+      </button>
     </div>
   </ng-template>
   </app-layout>
