--- a/src/app/modules/cart/pages/cart-pickup/cart-pickup.component.scss
+++ b/src/app/modules/cart/pages/cart-pickup/cart-pickup.component.scss
@@ -10,18 +10,44 @@
       width: 100%;
       display: flex;
       flex-flow: row wrap;
-      padding: 15px 0;
       border-top: 1px solid #e6e6e6;
+      padding: 10px 0;
       &:first-child {
         border: none;
       }
       .cart-item_details {
-        flex-direction: column;
+        flex-flow: row wrap;
         flex: 1;
+        max-width: 60%;
+        img {
+          max-width: 35%;
+          flex: 1;
+        }
+        &-text {
+          flex: 1;
+          flex-direction: column;
+          align-self: center;
+          padding: 0 0 0 15px;
+        }
         &-price {
           align-items: center;
           flex: 1;
           justify-content: flex-end;
+          max-width: 20%;
+        }
+        &-actions {
+          flex-flow: column;
+          flex: 1;
+          max-width: 10%;
+          justify-content: center;
+          align-items: center;
+          border-left: 1px solid #e6e6e6;
+          margin-left: 10px;
+          .btn {
+            color: #d8d8d8;
+            &-edit {
+            }
+          }
         }
       }
     }
@@ -53,4 +79,7 @@
       }
     }
   }
+}
+.cart-total-price {
+  margin: 20px 0;
 }
