Create Lazy Loading

--- a/src/app/modules/products/components/product-card.component.html
+++ b/src/app/modules/products/components/product-card.component.html
@@ -1,5 +1,5 @@
 <mat-card
-  routerLink="/product/{{product.itemId}}"
+  routerLink="/products/{{product.itemId}}"
   *ngIf="product && product.thumbnailImage"
   ngClass="{{class}}">
 
