Refactor structure and create animations

--- a/src/app/modules/sales/components/cart/cart-item.component.scss
+++ b/src/app/modules/sales/components/cart/cart-item.component.scss
@@ -1,4 +1,4 @@
-@import "variables";
+@import 'variables';
 
 .cart-pickup {
   &_content {
@@ -12,6 +12,7 @@
       flex-flow: row wrap;
       border-top: 1px solid #e6e6e6;
       padding: 10px 0;
+      
       &:first-child {
         border: none;
       }
@@ -52,33 +53,14 @@
       }
     }
   }
-  &_actions {
-    display: flex;
-    flex-flow: row wrap;
-    .btn {
-      color: #000;
-      flex: 1;
-      margin: 15px;
-      font-weight: bold;
-
-      &-checkout {
-        background-color: #6ac4ea;
-        color: white;
-        &:hover {
-          background-color: #2496C7;
-        }
-      }
-      &-cancel {
-        background-color: #e6e6e6;
-        opacity: 0.5;
-
-        &:hover {
-          opacity: 1;
-        }
-      }
-    }
-  }
 }
-.cart-total-price {
-  margin: 20px 0;
+
+@keyframes animateRight{
+  from {
+      right:-700px;
+      opacity:0;
+  } to {
+      right:0;
+      opacity:1;
+  }
 }
