--- a/src/app/modules/sales/components/products/product-card.component.html
+++ b/src/app/modules/sales/components/products/product-card.component.html
@@ -1,5 +1,5 @@
 <mat-card
-  routerLink="/products/{{product.itemId}}"
+  routerLink="/sales/product/{{product.itemId}}"
   *ngIf="product && product.thumbnailImage"
   ngClass="{{class}}">
 
