--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -17,5 +17,14 @@ $headline-6: (20/$base-rem-calculator)rem;
 $body-1: (16/$base-rem-calculator)rem;
 $body-1: (14/$base-rem-calculator)rem;
 
-
 $spacer: 12px;
+
+//Colors
+
+$primary-color: #69D2E7;
+$secondary-color: #FA6900;
+$primary-color-lighteen: #A7DBD8;
+$secondary-color-lighteen: #F38630;
+$invert-color: #E0E4CC;
+$default-color: #fff;
+$normal-color: #000;
