--- a/src/app/shared/components/layout.component.html
+++ b/src/app/shared/components/layout.component.html
@@ -6,7 +6,7 @@
   </mat-sidenav>
 
   <mat-sidenav-content style="overflow:inherit;">
-    <mat-toolbar style="background-color: #3c454f;color: #fff;">
+    <mat-toolbar style="background-color: #69D2E7;color: #fff;">
       <button mat-icon-button (click)="nav.toggle()">
         <mat-icon>menu</mat-icon>
       </button>
@@ -18,14 +18,14 @@
         <button mat-icon-button>
           <mat-icon>notifications</mat-icon>
           <svg id="" style="position: absolute;bottom: 0;right: 0;width: 14px;height: 14px;">
-              <circle cx="7" cy="7" r="7" stroke="black" stroke-width="0" fill="#6ac4ea"></circle>
+              <circle cx="7" cy="7" r="7" stroke="black" stroke-width="0" fill="#FA6900"></circle>
               <text id="notification_count" x="7" y="11" fill="white" style="font-size: 8pt; width: 6px;" width="20" text-anchor="middle">0</text>
           </svg>
         </button>
         <button mat-icon-button (click)="cart.toggle()">
           <mat-icon>shopping_cart</mat-icon>
           <svg id="" style="position: absolute;bottom: 0;right: 0;width: 14px;height: 14px;">
-              <circle cx="7" cy="7" r="7" stroke="black" stroke-width="0" fill="#6ac4ea"></circle>
+              <circle cx="7" cy="7" r="7" stroke="black" stroke-width="0" fill="#FA6900"></circle>
               <text id="notification_count" x="7" y="11" fill="white" style="font-size: 8pt; width: 6px;" width="20" text-anchor="middle">{{ itemsInCart() }}</text>
           </svg>
         </button>
@@ -34,7 +34,7 @@
         </button>
       </div>
     </mat-toolbar>
-    <mat-toolbar color="primary">
+    <mat-toolbar style="background-color: #A7DBD8;color:#fff;">
         <div class="sales-group">
           <mat-icon>filter_list</mat-icon>
           <mat-icon>shopping_cart</mat-icon>
