--- a/src/app/modules/sales/pages/cart/cart-pickup.component.html
+++ b/src/app/modules/sales/pages/cart/cart-pickup.component.html
@@ -1,17 +1,19 @@
-<div *ngIf="recentItem" class="cart-pickup_content">
-  <app-cart-item *ngFor="let i of recentItem" [product]="i" (clear)="clearCart($event)"></app-cart-item>
-  <div class="cart-total-price">
-    Total: R${{ totalCartPrice() }}
-    Itens: {{ quantityItemsCart() }}
-  </div>
-  <div class="cart-pickup_actions">
+<ng-template [ngIf]="recentItem">
+  <div class="cart-pickup_content">
+    <app-cart-item *ngFor="let i of recentItem" [product]="i" (clear)="clearCart($event)"></app-cart-item>
+    <div class="cart-total-price">
+      Total: R${{ totalCartPrice() }}
+      Itens: {{ quantityItemsCart() }}
+    </div>
+    <div class="cart-pickup_actions">
       <button mat-raised-button class="btn btn-cancel" (click)="clear()">
         Cancelar
       </button>
-      <button mat-raised-button class="btn btn-checkout" routerLink="/cart/checkout">
+      <button mat-raised-button class="btn btn-checkout" routerLink="/checkout">
         Checkout
       </button>
+    </div>
   </div>
-</div>
+</ng-template>
   
     
