Adding Ionic 4 components and create Emitter to open cart

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<router-outlet></router-outlet>
-<ngx-loading-bar
-  height="3px"
-  [includeSpinner]="false"></ngx-loading-bar>
+<ion-app>
+  <router-outlet></router-outlet>
+  <ngx-loading-bar
+    height="3px"
+    [includeSpinner]="false"></ngx-loading-bar>
+</ion-app>
