--- a/src/app/shared/components/layout.component.scss
+++ b/src/app/shared/components/layout.component.scss
@@ -13,6 +13,7 @@
   &.right {
     min-width: 500px;
     max-width: 500px;
+    z-index: 99999;
     .side-cart {
       &_header {
         display: flex;
