Att Component and create initial Tab Navigation

--- a/src/app/modules/sales/components/cart/cart-item.component.html
+++ b/src/app/modules/sales/components/cart/cart-item.component.html
@@ -1,8 +1,8 @@
 <ion-list [@itemAnim]>
     <ion-item>
-      <ion-avatar slot="start">
+      <ion-thumbnail item-start>
         <img src="{{ product.thumbnailImage }}"/>
-      </ion-avatar>
+      </ion-thumbnail>
       <ion-label>
         <ion-grid>
             <ion-row>
