--- a/src/app/modules/sales/pages/cart/cart-pickup.component.html
+++ b/src/app/modules/sales/pages/cart/cart-pickup.component.html
@@ -6,7 +6,7 @@
       Itens: {{ quantityItemsCart() }}
     </div>
     <div class="cart-pickup_actions">
-      <button mat-raised-button class="btn btn-cancel" (click)="clear()">
+      <button mat-raised-button class="btn btn-cancel" (click)="clearAll()">
         Cancelar
       </button>
       <button mat-raised-button class="btn btn-checkout" routerLink="/checkout">
