Att service Tab

--- a/src/app/shared/components/tabs.component.html
+++ b/src/app/shared/components/tabs.component.html
@@ -3,7 +3,7 @@
     <li class="add-new" (click)="createTab()">
       <a>+</a>
     </li>
-    <li [ngClass]="{'active': selectedItem === item}" (click)="listClick($event, item)" *ngFor="let item of tabs">
+    <li class="{{ class }}"(click)="switchTabs($event, item)" *ngFor="let item of tabs">
       <a routerLink="{{ item.Link }}">Shop</a> 
     </li>
   </ul>
