Create toast ionic

--- a/src/app/shared/components/layout.component.html
+++ b/src/app/shared/components/layout.component.html
@@ -37,7 +37,7 @@
                 <mat-icon>account_circle</mat-icon>
               </ion-fab-button>
               <ion-fab-list side="bottom">
-                <ion-fab-button><mat-icon>mail</mat-icon></ion-fab-button>
+                <ion-fab-button (click)="presentToast()"><mat-icon>mail</mat-icon></ion-fab-button>
                 <ion-fab-button><mat-icon>payment</mat-icon></ion-fab-button>
                 <ion-fab-button><mat-icon>person_add</mat-icon></ion-fab-button>
                 <ion-fab-button><mat-icon>settings</mat-icon></ion-fab-button>
