--- a/src/app/shared/components/tabs.component.scss
+++ b/src/app/shared/components/tabs.component.scss
@@ -14,6 +14,7 @@
         a {
           color: white;
           font-size: 25px;
+          cursor: pointer;
         }
         &:before {
           border-color: transparent #B1B1B1 transparent transparent;
