--- a/src/app/shared/components/tabs.component.scss
+++ b/src/app/shared/components/tabs.component.scss
@@ -43,7 +43,8 @@
       position: relative;
       box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
       max-width: 200px;
-      > a {
+      > p {
+        margin: 0;
         display: inline-block;
         max-width: 100%;
         overflow: hidden;
