--- a/src/app/shared/components/tabs.component.html
+++ b/src/app/shared/components/tabs.component.html
@@ -3,7 +3,7 @@
     <li class="add-new" (click)="newTab()">
       <a>+</a>
     </li>
-    <li class="{{ class }}" (click)="switchTabs(item)" *ngFor="let item of tabs.reverse()">
+    <li [class.active]="item.Id === tabService.activeTabId" (click)="switchTabs(item)" *ngFor="let item of tabs.reverse()">
       <p>{{item.Link}}</p>
     </li>
   </ul>
