--- a/src/app/shared/components/tabs.component.scss
+++ b/src/app/shared/components/tabs.component.scss
@@ -63,6 +63,7 @@
         top: 0px;
         border-style: solid;
         position: absolute;
+        z-index: -999;
       }
       &:before {
         border-color: transparent #ddd transparent transparent;
