--- a/src/app/shared/components/tabs.component.scss
+++ b/src/app/shared/components/tabs.component.scss
@@ -25,12 +25,12 @@
       }
       &.active {
         z-index: 2;
-        background: #efefef;
+        background: #f6f6f6;
         &:before {
-          border-color: transparent #efefef transparent transparent;
+          border-color: transparent #f6f6f6 transparent transparent;
         }
         &:after {
-          border-color: transparent transparent transparent #efefef;
+          border-color: transparent transparent transparent #f6f6f6;
         }
       }
       float: right;
@@ -52,6 +52,7 @@
         text-decoration: none;
         color: #222;
         font-size: 18px;
+        cursor: pointer;
       }
       &:before, &:after {
         content: '';
